# ComputerVision

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Main  Main.cbp  Main.cpp  Main.cpp~  Main.h  Main.h~  Makefile  ROC.m  cmake_install.cmake  error.h  error.h~  old_snippets.txt  old_snippets.txt~
ClassificationResults/2016_5_23__18_12_49/: _evaluation.txt
ClassificationResults/2016_5_23__19_15_51/: _evaluation.txt
ClassificationResults/2016_5_23__19_19_21/: _evaluation.txt
ClassificationResults/2016_5_23__19_45_9/: _evaluation.txt
ClassificationResults/2016_5_23__20_13_49/: _evaluation.txt
ClassificationResults/2016_5_24__18_41_46/: _evaluation.txt
Classifier/: assignment2.cc~  classifier.cc  classifier.h  classifier.h~  clipper.cpp  hog.cc~  hog.h~
Data/: ImageObj.cpp  ImageObj.h  ImageObj.h~  JSONImage.cpp  JSONImage.h  JSONImage.h~
HOG/: Makefile~  assignment2  assignment2.cc  assignment2.cc~  classifier (Kopie).cc  classifier (Kopie).h  classifier.cc  classifier.cc~  classifier.h  classifier.h~  error.tt  error.txt  hog.cc  hog.cc~  hog.h  hog.h~  hog_custom.cc
Helper/: FileManager.cpp  FileManager.cpp.autosave  FileManager.h  FileManager.h~
LBP/: CMakeCache.txt  CMakeLists.txt~  LBP  LBP.cpp  LBP.h~  Makefile  cmake_install.cmake  histogram.cpp  histogram.hpp  lbp.cpp  lbp.hpp  lbpfeature.cpp
ROC/: ROC.m
SVM_Savings/: svm_2016_7_13__16_43_32.xml  svm_2016_7_13__17_7_19.xml  svm_classifier.xml  svm_classifier_hardnegative.xml  svm_final.xml  svm_lbp_negative.xml  svm_nice_5_08_015_width128_jitter3_anglestep8.xml
(+4 files in other folders)
