cmake_minimum_required(VERSION 2.8)
project( Main )
find_package( OpenCV REQUIRED )
include_directories(${HOG})
add_executable( Main Main.cpp Classifier/classifier.h Classifier/classifier.cc Classifier/clipper.hpp Classifier/clipper.cpp Data/ImageObj.h Data/ImageObj.cpp Data/JSONImage.h Data/JSONImage.cpp Helper/FileManager.h Helper/FileManager.cpp LBP/LBP.h LBP/LBP.cpp)
target_link_libraries( Main ${OpenCV_LIBS} )
